tests/suite/fail/generated/parser/fail_undefined_2.ny
fn main() {
    let x = y2 //~ ERROR undefined variable
}
